[gd_scene load_steps=15 format=3 uid="uid://by4lg0ktq42ig"]

[ext_resource type="Script" path="res://house_yaga_space/content/ui/story.gd" id="1_mc2i7"]
[ext_resource type="Texture2D" uid="uid://yxsebvwir5do" path="res://house_yaga_space/resource/ui/comic/Рисунок 01.jpg" id="2_41w0l"]
[ext_resource type="Texture2D" uid="uid://cfigjkiojgc5v" path="res://house_yaga_space/resource/ui/comic/Рисунок 02.jpg" id="3_vbcwy"]
[ext_resource type="Texture2D" uid="uid://dy2lbd4ctfkj1" path="res://house_yaga_space/resource/ui/comic/Рисунок 03.jpg" id="4_opacw"]
[ext_resource type="Texture2D" uid="uid://b1m5m6yw2xq0c" path="res://house_yaga_space/resource/ui/comic/Рисунок 04.jpg" id="5_kw2sw"]
[ext_resource type="Texture2D" uid="uid://dvoci3dfxnwv3" path="res://house_yaga_space/resource/ui/comic/Рисунок 05.jpg" id="6_gx5d8"]
[ext_resource type="Texture2D" uid="uid://bdj32w6dlvh3q" path="res://house_yaga_space/resource/ui/comic/Рисунок 06.jpg" id="7_j5um7"]
[ext_resource type="Texture2D" uid="uid://bfgiwfpgb8ijy" path="res://house_yaga_space/resource/ui/comic/Рисунок 07.jpg" id="8_hqpmd"]
[ext_resource type="Texture2D" uid="uid://dl81di5ig31u5" path="res://house_yaga_space/resource/ui/comic/Рисунок 08.jpg" id="9_t7alw"]
[ext_resource type="Texture2D" uid="uid://ckrnwynycoqug" path="res://house_yaga_space/resource/ui/comic/Рисунок 09.jpg" id="10_2ag1q"]
[ext_resource type="Texture2D" uid="uid://utl8p07o2l3j" path="res://house_yaga_space/resource/ui/comic/Рисунок 10.jpg" id="11_rc1f1"]
[ext_resource type="Texture2D" uid="uid://cr4e6h2nbe0ah" path="res://house_yaga_space/resource/ui/comic/Рисунок 11.jpg" id="12_478rd"]
[ext_resource type="Theme" uid="uid://qe2wkjg65iy6" path="res://house_yaga_space/resource/ui/theme_pause.tres" id="13_qv0lg"]
[ext_resource type="Texture2D" uid="uid://mps1e5wmnrfg" path="res://house_yaga_space/resource/ui/comic/Рисунок 12.jpg" id="13_qw1l3"]

[node name="Story" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mc2i7")

[node name="TabContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false

[node name="Page1" type="TextureRect" parent="TabContainer"]
layout_mode = 2
texture = ExtResource("2_41w0l")
expand_mode = 1
stretch_mode = 5

[node name="Page2" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_vbcwy")
expand_mode = 1
stretch_mode = 5

[node name="Page3" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_opacw")
expand_mode = 1
stretch_mode = 5

[node name="Page4" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_kw2sw")
expand_mode = 1
stretch_mode = 5

[node name="Page5" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("6_gx5d8")
expand_mode = 1
stretch_mode = 5

[node name="Page6" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("7_j5um7")
expand_mode = 1
stretch_mode = 5

[node name="Page7" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("8_hqpmd")
expand_mode = 1
stretch_mode = 5

[node name="Page8" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("9_t7alw")
expand_mode = 1
stretch_mode = 5

[node name="Page9" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("10_2ag1q")
expand_mode = 1
stretch_mode = 5

[node name="Page10" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("11_rc1f1")
expand_mode = 1
stretch_mode = 5

[node name="Page11" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("12_478rd")
expand_mode = 1
stretch_mode = 5

[node name="Page12" type="TextureRect" parent="TabContainer"]
visible = false
layout_mode = 2
texture = ExtResource("13_qw1l3")
expand_mode = 1
stretch_mode = 5

[node name="ButtonNext" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -205.0
offset_bottom = -105.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_qv0lg")
theme_override_font_sizes/font_size = 0

[node name="Label" type="Label" parent="ButtonNext"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Вперед"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPrev" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_qv0lg")
theme_override_font_sizes/font_size = 0

[node name="Label" type="Label" parent="ButtonPrev"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Назад"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonReturn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 200.0
grow_vertical = 0
theme = ExtResource("13_qv0lg")
theme_override_font_sizes/font_size = 0

[node name="Label" type="Label" parent="ButtonReturn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "В меню"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="ButtonPrev" to="." method="_on_button_prev_pressed"]
[connection signal="pressed" from="ButtonReturn" to="." method="_on_button_return_pressed"]
